Updated seminal papers section

--- a/seminal_papers/01_Carneiro_al_2011/main.tex
+++ b/seminal_papers/01_Carneiro_al_2011/main.tex
@@ -2,7 +2,7 @@
 
 %!TEX root = ../main.tex
 \title{Estimating Marginal Returns to Education}
-\author{Pedro Carneiro, James J. Heckman, and Edward J. Vytlacil}
+\author{Carneiro, P., Heckman, J. J., and Vytlacil, E. J.}
 
 \date{}
 
