--- a/seminal_papers/02_Cunha_al_2010/files/s-paper.tex
+++ b/seminal_papers/02_Cunha_al_2010/files/s-paper.tex
@@ -62,7 +62,7 @@ Period $t$ stocks of abilities and skills promote the acquisition of skills by m
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Optimal Investment Ratios}
-\scalebox{0.75}{\includegraphics{fig-early-late}}
+\scalebox{0.75}{\includegraphics{material/fig-early-late}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -104,17 +104,17 @@ where $E(\epsilon_{a, k, t, j}) = 0$, $j \in\{1,\hdots, M_{a, k, t}\}$, $t\in\{1
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Signal and Noise for Skills}\vspace{-0.6cm}
-\scalebox{0.60}{\includegraphics[angle=270]{fig-signal-noise-1}}
+\scalebox{0.60}{\includegraphics[angle=270]{material/fig-signal-noise-1}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Signal and Noise for Investment}\vspace{-0.6cm}
-\scalebox{0.60}{\includegraphics[angle=270]{fig-signal-noise-2}}
+\scalebox{0.60}{\includegraphics[angle=270]{material/fig-signal-noise-2}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Baseline Estimates}\vspace{0.3cm}
-\scalebox{0.50}{\includegraphics{fig-estimates-1}}
+\scalebox{0.50}{\includegraphics{material/fig-estimates-1}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -170,27 +170,27 @@ There is an analogous constraint minimization problem for crime.
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Aggregate Education by Initial Conditions}\vspace{0.3cm}
-\scalebox{0.60}{\includegraphics{fig-optimal-policy-1}}
+\scalebox{0.60}{\includegraphics{material/fig-optimal-policy-1}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Aggregate Education by Maternal Endowment}\vspace{0.3cm}
-\scalebox{0.80}{\includegraphics{fig-optimal-policy-2}}
+\scalebox{0.80}{\includegraphics{material/fig-optimal-policy-2}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Aggregate Crime by Initial Conditions}\vspace{0.3cm}
-\scalebox{0.80}{\includegraphics{fig-optimal-policy-3}}
+\scalebox{0.80}{\includegraphics{material/fig-optimal-policy-3}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Aggregate Crime by Maternal Endowment}\vspace{0.3cm}
-\scalebox{0.80}{\includegraphics{fig-optimal-policy-4}}
+\scalebox{0.80}{\includegraphics{material/fig-optimal-policy-4}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Density Ratios}\vspace{0.3cm}
-\scalebox{0.80}{\includegraphics{fig-optimal-policy-5}}
+\scalebox{0.80}{\includegraphics{material/fig-optimal-policy-5}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
