--- a/seminal_papers/03_Heckman_al_2010/files/s-randomization.tex
+++ b/seminal_papers/03_Heckman_al_2010/files/s-randomization.tex
@@ -102,8 +102,8 @@ See their \href{https://www.povertyactionlab.org}{website} for an impressive amo
 \begin{figure}
 \caption{Book Recommendations}
 \centering
-	\subfloat[]{\includegraphics[width=0.40\linewidth]{fig-poor-economics}} \hspace{25pt}
-	\subfloat[]{\includegraphics[width=0.40\linewidth]{fig-tyranny}}
+	\subfloat[]{\includegraphics[width=0.40\linewidth]{material/fig-poor-economics}} \hspace{25pt}
+	\subfloat[]{\includegraphics[width=0.40\linewidth]{material/fig-tyranny}}
 \end{figure}
 \end{frame}
 %-------------------------------------------------------------------------------
