--- a/seminal_papers/03_Heckman_al_2010/files/s-paper.tex
+++ b/seminal_papers/03_Heckman_al_2010/files/s-paper.tex
@@ -70,7 +70,7 @@ Part of a whole sequence ...
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Descriptive Statistics}
-\scalebox{0.75}{\includegraphics{fig-table-2}}
+\scalebox{0.75}{\includegraphics{material/fig-table-2}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -93,12 +93,12 @@ Part of a whole sequence ...
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Summary of Lifetime Costs and Benefits}
-\scalebox{0.75}{\includegraphics{fig-table-3}}
+\scalebox{0.75}{\includegraphics{material/fig-table-3}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}\caption{Main Results}
-\scalebox{0.75}{\includegraphics{fig-table-1}}
+\scalebox{0.75}{\includegraphics{material/fig-table-1}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
@@ -116,7 +116,7 @@ Every dollar we invest in high-quality early childhood education can save more t
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
 \begin{frame}\begin{figure}
-\scalebox{0.30}{\includegraphics{fig-heckmanequation}}
+\scalebox{0.30}{\includegraphics{material/fig-heckmanequation}}
 \end{figure}\end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
