First try create_project

--- a/research_skills/01_reading_scientific_papers/files/s-appendix.tex
+++ b/research_skills/01_reading_scientific_papers/files/s-appendix.tex
@@ -13,7 +13,7 @@
 \newgeometry{margin=0.5cm}
 \begin{frame}[allowframebreaks]\frametitle{}
 \bibliographystyle{apacite}
-\bibliography{../submodules/bibliography/literature}
+\bibliography{../../submodules/bibliography/literature}
 
 \end{frame}
 %------------------------------------------------------------------------------
