Added references for reading scientific papers

--- a/research_skills/01_reading_scientific_papers/files/s-introduction.tex
+++ b/research_skills/01_reading_scientific_papers/files/s-introduction.tex
@@ -74,5 +74,5 @@
 \begin{itemize}
 \item reread and reflect
 \end{itemize}\vspace{0.5cm}
-... see references for source\nocite{CUBoulder.2018}
+... see references for source\nocite{CUBoulder.2018} \nocite{Purugganan2004} \nocite{Keshav2016}
 \end{frame}
