adding talk on life cycle

--- a/overviews/02_life_cycle_wages/files/s-basic-facts.tex
+++ b/overviews/02_life_cycle_wages/files/s-basic-facts.tex
@@ -5,6 +5,76 @@
 \end{center}\end{frame}
 %---------------------------------------------------------------------------------------------------
 %---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-1.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-2-a.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-2-b.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-3-a.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-3-b.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-4-a.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-4-b.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-5-a.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-5-b.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.85}{\includegraphics{material/figure-5-c.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.50}{\includegraphics{material/table-1.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.60}{\includegraphics{material/table-2-a.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.75}{\includegraphics{material/table-2-b.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}[plain]\centering
+\scalebox{0.75}{\includegraphics{material/table-2-c.png}}
+\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
 \begin{frame}\textbf{Questions}\vspace{0.3cm}
 
 \begin{itemize}\setlength\itemsep{1em}
