--- a/overviews/02_life_cycle_wages/files/s-introduction.tex
+++ b/overviews/02_life_cycle_wages/files/s-introduction.tex
@@ -8,7 +8,11 @@
 \begin{frame}
 
 The material is draws from the following survey:
-\cite{Rubinstein.2006}
+
+\begin{itemize}
+\item \bibentry{Rubinstein.2006}
+\end{itemize}
+
 \end{frame}
 %-------------------------------------------------------------------------------
 %-------------------------------------------------------------------------------
