--- a/overviews/02_life_cycle_wages/files/s-models.tex
+++ b/overviews/02_life_cycle_wages/files/s-models.tex
@@ -3,7 +3,18 @@
 \begin{frame}\begin{center}
 	\LARGE\textbf{Models}
 \end{center}\end{frame}
+%---------------------------------------------------------------------------------------------------
+%---------------------------------------------------------------------------------------------------
+\begin{frame}\textbf{Implications}\vspace{0.3cm}
 
+\begin{itemize}\setlength\itemsep{1em}
+\item Investment
+\item Investment in school and on the job
+\item Search
+\item $\hdots$
+\end{itemize}
+
+\end{frame}
 %---------------------------------------------------------------------------------------------------
 %---------------------------------------------------------------------------------------------------
 \begin{frame}\begin{center}
