added some material

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -7,15 +7,21 @@
     "# Causal Models\n",
     "\n",
     "\n",
+    "## Introduction\n",
+    "\n",
     "This first darft of the lectures is mostly a direct copy from the references below.\n",
-    "\n"
+    "\n",
+    "\n",
+    "#### TODO: Why are we doing this?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Basic probablity and statistics\n",
+    "### Basic probablity and statistics\n",
+    "\n",
+    "#### TODO What do we need later on\n",
     "\n",
     "We call $X$ indepdendent of $Y$ and write $$ if and only if\n",
     "\n",
@@ -35,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Graphs\n",
+    "### Graphs\n",
     "\n",
     "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG.\n",
     "\n",
@@ -45,14 +51,63 @@
     "<img src=\"material/example_graph.png\" width=\"250\" />\n",
     "\n",
     "\n",
-    "### Vocabulary\n",
+    "#### Vocabulary\n",
     "\n",
-    "* parent, child, fully connected, undirected edge, v - structure, \n",
-    "\n",
+    "* parent, child, adjecent, directed edge, v - structure, \n",
     "\n",
     "* path, directed path, decendent\n",
     "\n",
+    "* directed acyclical graph\n",
     "\n",
+    "A path between nodes $i$ and $j$ is blocked by a set $S$ whenever there is a node $i_k$ such that one of the following possibilities holds:\n",
+    "\n",
+    "* $i_k \\in S$ and $i_{k - 1} \\rightarrow i_k \\rightarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\leftarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\rightarrow i_{k + 1}$\n",
+    "\n",
+    "* $i_{k - 1} \\rightarrow i_k \\leftarrow i_{k + 1}$ and neither $i_k$ nor any of its decendents is in $S$\n",
+    "\n",
+    "We say that two disjount subsets of vertices $A$ and $B$ are $d$ - separated by a third (also disjoint) subset $S$ if every path between nodes in $A$ and $B$ is blocked by $S$.\n",
+    "\n",
+    "#### Exercise\n",
+    "\n",
+    "For the graph $G$ above write down:\n",
+    "\n",
+    "* the non-decendents of $D$\n",
+    "\n",
+    "* all variables that are d-separated from $A$ given $F, D$\n",
+    "\n",
+    "* all sets of variables that you can condition on in order to d - separate $A$ and $D$ \n",
+    "\n",
+    "Which graphs satisfy the following d - separation statements?\n",
+    "\n",
+    "* Consider graphs with three nodes A, B and C such that A and B are d - separated by B.\n",
+    "\n",
+    "* Consider graphs with four nodes A, B, C and D, such that the following holds.\n",
+    "\n",
+    "\n",
+    "| .     | AND   | .     | d-separataed by|\n",
+    "|-------|-------|-------|----------------|\n",
+    "| A     |  $\\quad$     | C | $\\varnothing$\n",
+    "| A     |  $\\quad$     | D  | {B}     |\n",
+    "| A     |  $\\quad$     | D  | {B, C} |\n",
+    "| D     |  $\\quad$     | C  |  {B } |\n",
+    "| D     |  $\\quad$     | C  | {B, A} |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Structural equations models\n",
+    "\n",
+    "... under construction by Paul\n",
+    "\n",
+    "\n",
+    "## Using the underlying causal structure\n",
+    "\n",
+    "\n",
+    "### Instrumental variables\n",
+    "\n",
+    "<img src=\"material/iv_graph.png\" width=\"250\" />\n",
     "\n"
    ]
   },
@@ -62,7 +117,9 @@
    "source": [
     "## References\n",
     "\n",
-    "* http://web.math.ku.dk/~peters/jonas_files/cover.png"
+    "* http://web.math.ku.dk/~peters/jonas_files/cover.png\n",
+    "\n",
+    "* http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf"
    ]
   }
  ],
