--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -1,147 +1,157 @@
 {
- "cells": [
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Causal Models\n",
-    "\n",
-    "\n",
-    "## Introduction\n",
-    "\n",
-    "This first darft of the lectures is mostly a direct copy from the references below.\n",
-    "\n",
-    "\n",
-    "#### TODO: Why are we doing this?\n"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "lecture.ipynb",
+      "version": "0.3.2",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "language": "python",
+      "name": "python3"
+    }
   },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Basic probablity and statistics\n",
-    "\n",
-    "#### TODO What do we need later on\n",
-    "\n",
-    "We call $X$ indepdendent of $Y$ and write $$ if and only if\n",
-    "\n",
-    "\\begin{align*}\n",
-    "p(x, y) = p(x) p(y)\n",
-    "\\end{align*}\n",
-    "\n",
-    "We call $X_1, ..., X_p$ jointly indepdendent if and only if\n",
-    "\n",
-    "\\begin{align*}\n",
-    "p(x_1, .., x_p) = p(x_1) \\multiply ... \\multiply p(x_p)\n",
-    "\\end{align*}\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Graphs\n",
-    "\n",
-    "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG.\n",
-    "\n",
-    "**Definition** A graph $G = (V, E)$ consists of finitely many nodes or vertices $V$ and edges $E\\subset V^2$ with $(v,v)\\neq E$ for any $v \\in V$\n",
-    "\n",
-    "\n",
-    "<img src=\"material/example_graph.png\" width=\"250\" />\n",
-    "\n",
-    "\n",
-    "#### Vocabulary\n",
-    "\n",
-    "* parent, child, adjecent, directed edge, v - structure, \n",
-    "\n",
-    "* path, directed path, decendent\n",
-    "\n",
-    "* directed acyclical graph\n",
-    "\n",
-    "A path between nodes $i$ and $j$ is blocked by a set $S$ whenever there is a node $i_k$ such that one of the following possibilities holds:\n",
-    "\n",
-    "* $i_k \\in S$ and $i_{k - 1} \\rightarrow i_k \\rightarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\leftarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\rightarrow i_{k + 1}$\n",
-    "\n",
-    "* $i_{k - 1} \\rightarrow i_k \\leftarrow i_{k + 1}$ and neither $i_k$ nor any of its decendents is in $S$\n",
-    "\n",
-    "We say that two disjount subsets of vertices $A$ and $B$ are $d$ - separated by a third (also disjoint) subset $S$ if every path between nodes in $A$ and $B$ is blocked by $S$.\n",
-    "\n",
-    "#### Exercise\n",
-    "\n",
-    "For the graph $G$ above write down:\n",
-    "\n",
-    "* the non-decendents of $D$\n",
-    "\n",
-    "* all variables that are d-separated from $A$ given $F, D$\n",
-    "\n",
-    "* all sets of variables that you can condition on in order to d - separate $A$ and $D$ \n",
-    "\n",
-    "Which graphs satisfy the following d - separation statements?\n",
-    "\n",
-    "* Consider graphs with three nodes A, B and C such that A and B are d - separated by B.\n",
-    "\n",
-    "* Consider graphs with four nodes A, B, C and D, such that the following holds.\n",
-    "\n",
-    "\n",
-    "| .     | AND   | .     | d-separataed by|\n",
-    "|-------|-------|-------|----------------|\n",
-    "| A     |  $\\quad$     | C | $\\varnothing$\n",
-    "| A     |  $\\quad$     | D  | {B}     |\n",
-    "| A     |  $\\quad$     | D  | {B, C} |\n",
-    "| D     |  $\\quad$     | C  |  {B } |\n",
-    "| D     |  $\\quad$     | C  | {B, A} |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Structural equations models\n",
-    "\n",
-    "... under construction by Paul\n",
-    "\n",
-    "\n",
-    "## Using the underlying causal structure\n",
-    "\n",
-    "\n",
-    "### Instrumental variables\n",
-    "\n",
-    "<img src=\"material/iv_graph.png\" width=\"250\" />\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## References\n",
-    "\n",
-    "* http://web.math.ku.dk/~peters/jonas_files/cover.png\n",
-    "\n",
-    "* http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf"
-   ]
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.5.6"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "metadata": {
+        "id": "WuVgoNzhrJnb",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# Causal Models\n",
+        "\n",
+        "\n",
+        "## Introduction\n",
+        "\n",
+        "This first darft of the lectures is mostly a direct copy from the references below.\n",
+        "\n",
+        "\n",
+        "#### TODO: Why are we doing this?\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "qlYW10G7rJnh",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Basic probablity and statistics\n",
+        "\n",
+        "#### TODO What do we need later on\n",
+        "\n",
+        "We call $X$ indepdendent of $Y$ and write $$ if and only if\n",
+        "\n",
+        "\\begin{align*}\n",
+        "p(x, y) = p(x) p(y)\n",
+        "\\end{align*}\n",
+        "\n",
+        "We call $X_1, ..., X_p$ jointly indepdendent if and only if\n",
+        "\n",
+        "\\begin{align*}\n",
+        "p(x_1, .., x_p) = p(x_1) \\multiply ... \\multiply p(x_p)\n",
+        "\\end{align*}\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "n-ZTl2_2rJnk",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Graphs\n",
+        "\n",
+        "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG.\n",
+        "\n",
+        "**Definition** A graph $G = (V, E)$ consists of finitely many nodes or vertices $V$ and edges $E\\subset V^2$ with $(v,v)\\neq E$ for any $v \\in V$\n",
+        "\n",
+        "\n",
+        "<img src=\"https://github.com/HumanCapitalAnalysis/talks/blob/master/sandbox/01_causal_models/material/example_graph.png?raw=1\" width=\"250\" />\n",
+        "\n",
+        "\n",
+        "#### Vocabulary\n",
+        "\n",
+        "* parent, child, adjecent, directed edge, v - structure, \n",
+        "\n",
+        "* path, directed path, decendent\n",
+        "\n",
+        "* directed acyclical graph\n",
+        "\n",
+        "A path between nodes $i$ and $j$ is blocked by a set $S$ whenever there is a node $i_k$ such that one of the following possibilities holds:\n",
+        "\n",
+        "* $i_k \\in S$ and $i_{k - 1} \\rightarrow i_k \\rightarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\leftarrow i_{k + 1}$ or $i_{k - 1} \\leftarrow i_k \\rightarrow i_{k + 1}$\n",
+        "\n",
+        "* $i_{k - 1} \\rightarrow i_k \\leftarrow i_{k + 1}$ and neither $i_k$ nor any of its decendents is in $S$\n",
+        "\n",
+        "We say that two disjount subsets of vertices $A$ and $B$ are $d$ - separated by a third (also disjoint) subset $S$ if every path between nodes in $A$ and $B$ is blocked by $S$.\n",
+        "\n",
+        "#### Exercise\n",
+        "\n",
+        "For the graph $G$ above write down:\n",
+        "\n",
+        "* the non-decendents of $D$\n",
+        "\n",
+        "* all variables that are d-separated from $A$ given $F, D$\n",
+        "\n",
+        "* all sets of variables that you can condition on in order to d - separate $A$ and $D$ \n",
+        "\n",
+        "Which graphs satisfy the following d - separation statements?\n",
+        "\n",
+        "* Consider graphs with three nodes A, B and C such that A and B are d - separated by B.\n",
+        "\n",
+        "* Consider graphs with four nodes A, B, C and D, such that the following holds.\n",
+        "\n",
+        "\n",
+        "| .     | AND   | .     | d-separataed by|\n",
+        "|-------|-------|-------|----------------|\n",
+        "| A     |  $\\quad$     | C | $\\varnothing$\n",
+        "| A     |  $\\quad$     | D  | {B}     |\n",
+        "| A     |  $\\quad$     | D  | {B, C} |\n",
+        "| D     |  $\\quad$     | C  |  {B } |\n",
+        "| D     |  $\\quad$     | C  | {B, A} |\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "0DyX3f2urJno",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## Structural equations models\n",
+        "\n",
+        "... under construction by Paul\n",
+        "\n",
+        "\n",
+        "## Using the underlying causal structure\n",
+        "\n",
+        "\n",
+        "### Instrumental variables\n",
+        "\n",
+        "<img src=\"https://github.com/HumanCapitalAnalysis/talks/blob/master/sandbox/01_causal_models/material/iv_graph.png?raw=1\" width=\"250\" />\n",
+        "\n"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "etLxJPhlrJns",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "## References\n",
+        "\n",
+        "* http://web.math.ku.dk/~peters/jonas_files/cover.png\n",
+        "\n",
+        "* http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf\n",
+        "\n",
+        "* https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X"
+      ]
+    }
+  ]
 }
