edits to reference list

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -637,11 +637,11 @@
     "\n",
     "**LUWARD** proper citation setup\n",
     "\n",
-    "* Peters, J., Janzig, D. and Schölkopf, B. (2017). [Elements of causal inference: Foundations and learning algorithms](http://web.math.ku.dk/~peters/jonas_files/cover.png)\n",
+    "* Peters, J., Janzig, D. and Schölkopf, B. (2017). [Elements of causal inference: Foundations and learning algorithms](http://web.math.ku.dk/~peters/jonas_files/cover.png). Cambridge, MA: MIT Press.\n",
     "\n",
-    "* Peters, J. (2015). [Causality: Lecture notes](http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf)\n",
+    "* Peters, J. (2015). [Causality: Lecture notes](http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf). Zurich: ETH Zurich.\n",
     "\n",
-    "* Pearl, J. (2009). [Causality](https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X)"
+    "* Pearl, J. (2009). [Causality](https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X). Cambridge, MA: Cambridge University Press."
    ]
   },
   {
