corrected an indentation error

--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -73,8 +73,8 @@
     "\n",
     "## Introduction\n",
     "\n",
-    "This first draft of the lectures is mostly a direct copy from the references below \n",
-    "**LUWARD**: add reference for scritp\n",
+    "This first draft of the lectures is mostly a direct copy from the references below.   \n",
+    "**LUWARD**: add reference for script\n",
     "\n",
     "\n",
     "### Motivation\n",
