--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -798,8 +798,7 @@
     "    \n",
     "### Example:\n",
     "\n",
-    "<img src=\"material/dagitty.png\" width=500 />\n",
-    "<img src=\"material/kidney_graph.png\" width=\"250\" />\n",
+    "<img src=\"material/dagitty.png\" height=1000 width=500 />\n",
     "\n",
     "- Backdoor: $\\{A\\}, \\{B\\}$\n",
     "- Parent: $\\{C, A\\}$\n",
