--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -57,7 +57,7 @@
    "source": [
     "# Causal Models\n",
     "\n",
-    "## Learning Goals\n",
+    "### Learning Goals\n",
     "- What is a DAG?\n",
     "- How do DAGs relate to SEMs?\n",
     "- What does the do operator do?\n",
@@ -67,15 +67,21 @@
     "- Define Structural Equation Models\n",
     "- What is the additional structure imposed by causality\n",
     "\n",
-    "**LUWARD**: how can we set up custom configuration such as larger fonstize, sth. like custom.css?! \n",
-    "\n",
     "<img src=\"material/elements_of_causal_inference.png\" height=\"300\" width=230 />\n",
+    "\n",
+    "### Structure of lecture\n",
+    "\n",
+    "* Introduction\n",
+    "\n",
+    "* Graphs\n",
+    "\n",
+    "* Structural equations models\n",
+    "\n",
+    "* Using the underlying causal structure\n",
     "\n",
     "## Introduction\n",
     "\n",
     "This first draft of the lectures is mostly a direct copy from the references below.   \n",
-    "**LUWARD**: add reference for script\n",
-    "\n",
     "\n",
     "### Motivation\n",
     "\n",
@@ -85,12 +91,7 @@
     "\n",
     "> Simpson's paradox (or Simpson's reversal, Yule–Simpson effect, amalgamation paradox, or reversal paradox), is a phenomenon in probability and statistics, in which a trend appears in several different groups of data but disappears or reverses when these groups are combined. (Wikipedia)\n",
     "\n",
-    "We will look at the famous example of a kidney stone study where the efficacy of two treatments isc ompared. \n",
-    "\n",
-    "**LUWARD**: proper citation\n",
-    "\n",
-    "\n",
-    "The example is also discussed by the expert in this video and the discussion starts at about minute 54"
+    "We will look at the famous example of a kidney stone study where the efficacy of two treatments is compared. The example is also discussed by the expert in this video and the discussion starts at about minute 54"
    ]
   },
   {
@@ -410,9 +411,7 @@
    "source": [
     "### Graphs\n",
     "\n",
-    "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG.\n",
-    "\n",
-    "This material is also discussed in the second part of the video series around minute 60."
+    "In this subsection we will briefly review some basic vocabulary to describe graphs and discuss each based on an example DAG. This material is also discussed in the second part of the video series around minute 60."
    ]
   },
   {
@@ -572,7 +571,6 @@
     "- Why does the graph imply a unique joint distribution?\n",
     "    - Using the same strategy as for simulation I can express every variable as a function of the noise terms\n",
     "    example: $X_4 = f_4(f_2(f_1(f_3(N_3), N_1), N_2), f_3(N_3), N_4)$\n",
-    "    - Why does this uniquely pin down the joint distribution Philip?\n",
     "    \n",
     "### Do operator and Intervention distributions\n",
     "\n",
@@ -601,28 +599,15 @@
     "&S_2: Y := 3 \\\\\n",
     "&N_x, N_y \\sim^{i.i.d} N(0,1)  \n",
     "\\end{aligned}\n",
-    "- Thus the marginal distribution of X is the distribution of $N_x$\n",
+    "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|do(Y = 3)}$.\n",
     "\\begin{aligned}\n",
     "   \\mathbb{P}^{X|do(Y = 3)}) = N(0,1)\n",
     "\\end{aligned}\n",
-    "- What is the distribution of $X$ conditional on $Y=3$?\n",
-    "Recall the SEM from Exercise 1\n",
-    "\\begin{aligned}\n",
-    " &S_1: X := N_x \\\\\n",
-    " &S_2: Y := -6N_x + N_y \\\\\n",
-    " &N_x, N_y \\sim^{i.i.d} N(0,1)  \n",
-    "\\end{aligned}\n",
-    "Solve $S_2$ for $N_x$ and plug into $S_1$ to get\n",
-    "\\begin{aligned}\n",
-    "X = N_x = \\frac{N_y-Y}{6}  \\Rightarrow  \\mathbb{P}^{X|Y = 3} = N\\left(-\\frac{1}{2}, \\frac{1}{36} \\right) \\neq \\mathbb{P}^{X|do(Y = 3)} = N(0,1)\n",
-    "\\end{aligned}\n",
-    "- Is this correct Philipp?\n",
     "\n",
     "#### Causal Effects and the Difference Between Conditioning and Intervening\n",
     "- Draw Graph again\n",
     "- Interventions on Y do not affect X, however Interventions on X do affect Y. That is the case because the directed edge goes from $X$ to $Y$.\n",
     "- We use this observation to define a causal effect.  Given SEM $S$ there is a (total) causal effect from $X$ to $Y$ iff $X \\not\\!\\perp\\!\\!\\!\\perp Y$ in $\\mathbb{P}^{X|do(X = N^{'}_x)}_S$ for some variable $N^{'}_x$\n",
-    "- **Philipp:** What if the variable is a number?\n",
     "- If we want to quatify the causal effect we can compare how probabilities for a specific event change or look at the Average causal effect on $Y$ if we change $X$ from $x^{''}$ to $x^{'}$: $E[Y|X=do(x^{'})]-E[Y|X=do(x^{''})]$\n",
     "- The do operator only influences the distribution of children of the variable we intervene on. Conditioning also influences parents.\n",
     "\n",
@@ -803,13 +788,7 @@
     "- Backdoor: $\\{A\\}, \\{B\\}$\n",
     "- Parent: $\\{C, A\\}$\n",
     "- All: $\\{A\\}, \\{B\\}, \\{A, B\\}, \\{A, F\\}, \\{B, F\\}, \\{A, C\\},\n",
-    "\\{B, C\\}, \\{A, B, C\\}, \\{A, B, F\\}$\n",
-    "\n",
-    "### Estimation\n",
-    "\n",
-    "If $Z$ is a valid adjustment set $(Y_a, Y_b) \\perp X | Z$, therefore we can estimate the average causal effect by controlling for $Z$ in matching or, under linearity, regression.\n",
-    "\n",
-    "**Philipp** this is from Froelich's lecture notes, has a nice link to our estimation strategies.\n"
+    "\\{B, C\\}, \\{A, B, C\\}, \\{A, B, F\\}$"
    ]
   },
   {
@@ -821,28 +800,12 @@
    "source": [
     "## References\n",
     "\n",
-    "**LUWARD** proper citation setup\n",
-    "\n",
     "* Peters, J., Janzig, D. and Schölkopf, B. (2017). [Elements of causal inference: Foundations and learning algorithms](http://web.math.ku.dk/~peters/jonas_files/cover.png). Cambridge, MA: MIT Press.\n",
     "\n",
     "* Peters, J. (2015). [Causality: Lecture notes](http://web.math.ku.dk/~peters/jonas_files/scriptChapter1-4.pdf). Zurich: ETH Zurich.\n",
     "\n",
     "* Pearl, J. (2009). [Causality](https://www.amazon.de/Causality-Judea-Pearl/dp/052189560X?SubscriptionId=AKIAILSHYYTFIVPWUY6Q&tag=duc03-21&linkCode=xm2&camp=2025&creative=165953&creativeASIN=052189560X). Cambridge, MA: Cambridge University Press.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
