--- a/sandbox/01_causal_models/lecture.ipynb
+++ b/sandbox/01_causal_models/lecture.ipynb
@@ -13,9 +13,7 @@
     "import numpy as np\n",
     "\n",
     "from IPython.lib.display import YouTubeVideo\n",
-    "\n",
-    "sns.set(style='darkgrid')\n",
-    "\n"
+    "sns.set(style='darkgrid')"
    ]
   },
   {
@@ -473,7 +471,7 @@
     "\n",
     "* $i_{k - 1} \\rightarrow i_k \\leftarrow i_{k + 1}$ and neither $i_k$ nor any of its decendents is in $S$\n",
     "\n",
-    "We say that two disjount subsets of vertices $A$ and $B$ are $d$ - separated by a third (also disjoint) subset $S$ if every path between nodes in $A$ and $B$ is blocked by $S$. The staetment of $d$ - separation is symmetric, thus if $X_i$ is separated from $X_j$ then the opposite direction is also true.\n",
+    "We say that two disjount subsets of vertices $A$ and $B$ are $d$ - separated by a third (also disjoint) subset $S$ if every path between nodes in $A$ and $B$ is blocked by $S$. The statement of $d$ - separation is symmetric, thus if $X_i$ is separated from $X_j$ then the opposite direction is also true.\n",
     "\n",
     "#### Exercise\n",
     "\n",
@@ -487,7 +485,7 @@
     "\n",
     "Which graphs satisfy the following d - separation statements?\n",
     "\n",
-    "* Consider graphs with three nodes A, B and C such that A and B are d - separated by B.\n",
+    "* Consider graphs with three nodes A, B and C such that A and C are d - separated by B.\n",
     "\n",
     "* Consider graphs with four nodes A, B, C and D, such that the following holds.\n",
     "\n",
@@ -526,19 +524,25 @@
     "\n",
     "#### Example 1 \n",
     "Consider the following SEM \n",
-    "\\begin{aligned}\n",
+    "\n",
+    "\n",
+    "$\\begin{aligned}\n",
     "&S_1: X := N_x\\\\\n",
     "&S_2: Y := -6X + N_y\\\\\n",
     "&N_x, N_y \\sim^{i.i.d} N(0,1)  \n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
     "\n",
     "- What is the covariance between $X$ and $Y$?\n",
     "Plug in error terms and calculate\n",
-    "\\begin{equation*}\n",
+    "\n",
+    "$\\begin{equation*}\n",
     "cov(XY) := E[N_x(-6N_x+N_y)] - 0 \\cdot 0\n",
     "\\end{equation*}\n",
-    "-What is the joint distribution of $X$ and $Y$?\n",
-    "\\begin{aligned}\n",
+    "$\n",
+    "\n",
+    "* What is the joint distribution of $X$ and $Y$?\n",
+    "\n",
+    "$\\begin{aligned}\n",
     "(X, Y) \\sim N \\left(\\left(\n",
     "\\begin{matrix}\n",
     "  0 \\\\\n",
@@ -548,18 +552,20 @@
     "   1& -6 \\\\\n",
     "  -6& 37\n",
     "  \\end{matrix} \\right) \\right)\n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
+    "\n",
     "- What is the corresponding DAG?\n",
     "\n",
     "#### Example 2\n",
     "\n",
     "\n",
-    "\\begin{aligned}\n",
+    "$\\begin{aligned}\n",
     "S_1: X_1 &:= f_1(X_3, N_1)\\\\\n",
     "S_2: X_2 &:= f_2(X_1, N_2)\\\\\n",
     "S_3: X_3 &:= f_3(N_3) \\\\\n",
     "S_4: X_4 &:= f_4(X_2, X_3, N_4) \\\\\n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
+    "\n",
     "The $N_i$ are jointly independent\n",
     "\n",
     "- Draw the corresponding Graph and verify that it doesn't have cycles\n",
@@ -583,26 +589,34 @@
     "#### Example 1 Revisited\n",
     "- We apply $do(X = 3)$ to the structural model from Example 1?\n",
     "- The modified model is\n",
-    "\\begin{aligned}\n",
+    "\n",
+    "$\\begin{aligned}\n",
     "&S_1: X := 3\\\\\n",
     "&S_2: Y := -6X + N_y\\\\\n",
     "&N_x, N_y \\sim^{i.i.d} N(0,1)  \n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
+    "\n",
     "- What is the marginal distribution of Y?\n",
-    "\\begin{aligned}\n",
+    "\n",
+    "$\\begin{aligned}\n",
     "    \\mathbb{P}^Y_S = N(0, 17) \\neq \\mathbb{P}^{Y|do(X = 3)}_S = N(-18, 1) = \\mathbb{P}^{Y|X = 3}_S\n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
     "- What is the marginal distribution of X if we intervene on $Y ( \\mathbb{P}^{X|do(Y = 3)})$?\n",
     "- The modified model is\n",
-    "\\begin{aligned}\n",
+    "\n",
+    "$\\begin{aligned}\n",
     "&S_1: X := N_x\\\\\n",
     "&S_2: Y := 3 \\\\\n",
     "&N_x, N_y \\sim^{i.i.d} N(0,1)  \n",
-    "\\end{aligned}\n",
-    "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|do(Y = 3)}$.\n",
-    "\\begin{aligned}\n",
-    "   \\mathbb{P}^{X|do(Y = 3)}) = N(0,1)\n",
-    "\\end{aligned}\n",
+    "\\end{aligned}$\n",
+    "\n",
+    "- Thus the marginal distribution of X is the distribution of $N_x$\n",
+    "\n",
+    "$\\begin{aligned}\n",
+    "   \\mathbb{P}^{X|do(Y = 3)} = N(0,1)\n",
+    "\\end{aligned}$\n",
+    "\n",
+    "- This differs from the conditional disttribution of $X$ given $Y = 3$ denoted $\\mathbb{P}^{X|Y = 3}$.\n",
     "\n",
     "#### Causal Effects and the Difference Between Conditioning and Intervening\n",
     "- Draw Graph again\n",
